<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Social Drive</string>
    <string name="app_id">384749178309933</string>
    <string name="android_key">AIzaSyCLM8OuvCC_BKcqeL2uHJT7Nkn4nDgbzLE</string>
    <string name="map_api_key">AIzaSyB5Y0Mtfz3hnAW200MK_hi9iEAYtfyqiHA</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="title_activity_authenticated">Authenticated</string>
    <string name="title_activity_bluetooth">Bluetooth Activity</string>
    <string name="title_activity_device_list">Device Activity</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="view_map">View Map</string>
    <string name="view_stat">Record Trip</string>
    <string name="title_activity_user_stat">ecoDrive</string>
    <string name="title_activity_interface">Social Drive</string>
    <string name="view_interface">See Friend Activities</string>
    <string name="title_activity_friend_tab">FriendTab</string>
    <string name="title_activity_personal_tab">PersonalTab</string>
    <string name="title_activity_trip_tab">TripTab</string>
    <string name="post_trip">Share on Facebook</string>
    <string name="progress_dialog_text">Posting your trip, please wait.</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="result_dialog_text">Posted Open Graph action, id: %1$s</string>
    <string name="confirm_title">Save Trip</string>
    <string name="confirm_message">Would you like to save the trip?</string>
    <string name="cancel">Discard Trip</string>
    <string name="yes">Save Trip</string>
    
    <string name="confirm_del_title">Delete Trip</string>
    <string name="confirm_del_message">Would you like to delete the trip?</string>
    <string name="confirm_del_yes">Yes</string>
    <string name="confirm_del_no">No</string>
    
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="confirm_delete_title">Save Trip</string>
    <string name="confirm_delete_message">Would you like to save the trip?</string>
    <string name="delete_cancel">Discard Trip</string>
    <string name="delete_yes">Save Trip</string>
    <string name="title_auto_fb">Periodic Facebook Posting</string>
    <string name="desc_auto_fb">This setting will enable SocialDrive to post your trip status on Facebook periodically.</string>
    <string name="title_vehicle_name">Vehicle Name</string>
    <string name="title_sync_frequency">Facebook Sync Frequency</string>
    
    <string name="title_activity_trip_edit">Edit Trip Description</string>
    <string name="edit_trip_instr">Use the text boxes below to provide a title and description of this trip. This will make it easier for your friends on Facebook to see the trip that you have taken. Be creative!</string>
    <string name="edit_trip_title">Please provide a title for this trip.</string>
    <string name="edit_trip_desc">Please provide a description of this trip.</string>
    <string name="save">Save</string>
    
    <string name="title_activity_upload">Uploader</string>
    
    <!-- Integrated from OBDIIMonitor -->
    
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="scanning">scanning for devices</string>
    
</resources>